kubernetes/angular_dep_ser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
  labels:
    app: angular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
        - name: angular-app
          image: angular-app:latest
          ports:
            - containerPort: 4200
          volumeMounts:
            - mountPath: /usr/src/app
              name: angular-code
          command: ["sh", "-c", "npm install && ng serve --host 0.0.0.0 --disable-host-check"]
      volumes:
        - name: angular-code
          persistentVolumeClaim:
            claimName: angular-code-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: angular-app-service
spec:
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  type: NodePort
