kubernetes/springboot_dep_ser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayurveda-server
  labels:
    app: ayurveda-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ayurveda-server
  template:
    metadata:
      labels:
        app: ayurveda-server
    spec:
      containers:
        - name: ayurveda-server
          image: ayurveda-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ayurveda-server-service
spec:
  selector:
    app: ayurveda-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
