kubernetes/angular_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ayurveda-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /angular
            pathType: Prefix
            backend:
              service:
                name: angular-app-service
                port:
                  number: 4200
          - path: /spring
            pathType: Prefix
            backend:
              service:
                name: ayurveda-server-service
                port:
                  number: 8080
